--- a/GoogleGlassHTML/pitico.html
+++ b/GoogleGlassHTML/pitico.html
@@ -30,11 +30,11 @@
             <h1>Menu Principal</h1>
         
             <ul>
-                <li><a href="pitico.html">Home</a></li>
-                <li><a href="specs.html">Especificações</a></li>
-                <li><a href="fotos.html">Fotos</a></li>
-                <li><a href="multimidia.html">Multimídia</a></li>
-                <li><a href="fale-conosco.html">Fale conosco</a></li>
+                <li onmouseover="mudaFoto('_imagens/Home.png')" onmouseout="mudaFoto('glass-oculos-preto-peq.png')"><a href="pitico.html">Home</a></li>
+                <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
+                <li onmouseover="mudaFoto('_imagens/Fotos.png')" onmouseout="mudaFoto('glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
+                <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
+                <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
             </ul>
 
             </nav>
