--- a/GoogleGlassHTML/pitico.html
+++ b/GoogleGlassHTML/pitico.html
@@ -23,7 +23,7 @@
                 <h2> A revolução do Google está chegando </h2>
             </hgroup>
         
-            <img id="icone" src="glass-oculos-preto-peq.png" width=200 height=121>                               
+            <img id="icone" src="glass-oculos-preto-peq.png">                               
             
             <nav id="menu"> 
 
