--- a/GoogleGlassHTML/google-glass.html
+++ b/GoogleGlassHTML/google-glass.html
@@ -13,7 +13,7 @@
         body{
             font-family: Arial, Helvetica, sans-serif;
             font-size: 16px;
-            background-color: #f5f5f5;
+            background-color: white;
 
         }
         p{
