--- a/GoogleGlassHTML/specs.html
+++ b/GoogleGlassHTML/specs.html
@@ -49,7 +49,7 @@
                 <h3> Glass > Especificações </h3>
                 <h1> Raio-X no Google Glass <h1>
                 <h4> por Gustavo Quiel </h4>
-                <h3>  por Gustavo Quiel - Atualizado em 01/Maio/2013 </h3>
+                <!-- <h3>  por Gustavo Quiel - Atualizado em 01/Maio/2013 </h3> -->
             </hgroup>
         </header>
 
