--- a/GoogleGlassHTML/fale-conosco.html
+++ b/GoogleGlassHTML/fale-conosco.html
@@ -92,12 +92,14 @@
 
                 <fieldset id="pedido">
                     <legend>Quero um Google Glass</legend>
-                Gostaria de adquirir um Google Glass quando disponível
-                Cor:
-                Quantidade:
-                Preço Total: R$
+                    <p><input type="checkbox" name="tPad" id="cPad"><label for="cPad">&emsp;Gostaria de adquirir um Google Glass quando disponível!?</label></p>
+                    <p><label for="cCor"><input type="color" name="tCor" id="cCor" value="#0000ff">&emsp;Cor:</label></p>
+                    <p><input type="number" min="0" max="5">&emsp;Quantidade:</p>
+                    <p><input type="text" readonly placeholder="Total a pagar">&emsp;Preço Total: R$</p>
                 </fieldset>
 
+                
+                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<input type="image" src="_imagens/botao-enviar.png">
             </form>
 
             </article>
